--- a/node_express_tutorial/public/html/index.html
+++ b/node_express_tutorial/public/html/index.html
@@ -4,16 +4,35 @@
       <title>Index.html</title>
       <meta charset="UTF-8">
       <script type="text/javascript" src="js/index.js"></script>
-      <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <link rel="shortcut icon" href="#">
+      <style>
+         table {
+            font-family: arial, sans-serif;
+            border-collapse: collapse;
+            width: 30%;
+         }
+         td, th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+         }
+
+         tr:nth-child(even) {
+            background-color: #dddddd;
+         }
+      </style>
    </head>
-   <body onload="addEvent()">
+   <body>
       <form action="/db_connection" method="POST">
          <input type="text" name="search_term" placeholder="Search customers by name">
          <input type="submit" id="connection" value="Klikkaa tästä">
       </form>
+      <button onclick="testi()">Toimiiko tämä</button>
 
-      
+      <table id="customertable">
+
+      </table>
       <!--<form action = "http://127.0.0.1:8081/process_get" method = "GET">
          First Name: <input type = "text" name = "first_name">  <br>
          Last Name: <input type = "text" name = "last_name">
